--- a/src/App.css
+++ b/src/App.css
@@ -234,3 +234,11 @@ body::-webkit-scrollbar-button:increment, body::-webkit-scrollbar-button {
 .fol{
   color: #00000096;
 }
+
+.hero{
+  background-image: url('Hero.jpg');
+}
+
+#technologies{
+  background-image: url('Tegnologias.jpg');
+}
